[package]
name = "mcpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azalea-protocol = { git = "https://github.com/mat-1/azalea.git", version = "*" }
color-eyre = "0.6.2"
tokio = { version = "1.34.0", default-features = false, features = ["time", "macros", "rt-multi-thread", "net", "io-util", "signal"] }
toml = "0.8.8"
lazy_static = "1.4.0"
serde = "1.0.192"
ureq = { version = "2.8.0", features = ["json"] }
strip-ansi-escapes = "0.2.0"
dotenvy = "0.15.7"
random-string = "1.1.0"
uuid = { version = "1.5.0", features = ["v4"] }
fastrand = "2.0.1"

[profile.release]
opt-level = 'z'

[patch.crates-io]
pkcs1 = { git = "https://github.com/RustCrypto/formats"}
